tests/NormalTests/paczka1/fuzzy1/79204194.err
Error in line 4: OroN4MJhW A966 59,2
Error in line 7: LvnjagC9 A140 43,1
Error in line 10: ihi9U A966 41,5
Error in line 21: LvnjagC9 S157 85,6
Error in line 27: OroN4MJhW S801 78,8
Error in line 32: OroN4MJhW A140 17,1
